--- a/src/app/features/profile/dashboard-page/overview/overview.component.html
+++ b/src/app/features/profile/dashboard-page/overview/overview.component.html
@@ -47,7 +47,7 @@
   <div class="dashboard-footer">
     <p>&copy; {{ currentYear }} Nayborly. All rights reserved.</p>
     <p>Follow us on <a href="https://twitter.com/nayborly" rel="noopener noreferrer" target="_blank">Twitter</a>
-      and <a href="http://instagram.com/nayborly" rel="noopener noreferrer" target="_blank">Instagram</a> for updates.
+      and <a href="https://instagram.com/nayborly" rel="noopener noreferrer" target="_blank">Instagram</a> for updates.
     </p>
     <p>Need help? Visit our <a [routerLink]="APP_ROUTES.INTRO.CONTACT">Contact</a> page.</p>
   </div>
