Refactor navbar component to remove inline overflow style for improved layout consistency

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -16,7 +16,7 @@
       <span class="bar"></span>
       <span class="bar"></span>
     </button>
-    <nav [class.active]="menuOpen" class="navbar-links" style="max-height: 90vh; overflow-y: auto;">
+    <nav [class.active]="menuOpen" class="navbar-links" style="max-height: 90vh;">
       <ul>
         <li><a (click)="closeMenu()" [routerLink]="APP_ROUTES.INTRO.HOME">Home</a></li>
         <li><a (click)="closeMenu()" [routerLink]="APP_ROUTES.LISTINGS.LIST">Listings</a></li>
